# Team-250-Backends

./: .gitignore  .travis.yml  Procfile  README.md  pyproject.toml  requirements.txt
src/zerohunger/accounts/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
src/zerohunger/accounts/migrations/: 0001_initial.py  0002_auto_20200528_0943.py  0003_auto_20200528_2033.py  0004_auto_20200531_2139.py
src/zerohunger/accounts/templates/: welcome.html
src/zerohunger/accounts/tests/: test_account_models.py  test_account_serializers.py  test_accounts_views.py  test_urls.py
src/zerohunger/orders/: apps.py  helper.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/zerohunger/orders/migrations/: 0001_initial.py  0002_auto_20200601_0755.py  0002_auto_20200608_0941.py  0003_auto_20200608_0945.py
src/zerohunger/orders/test/: test_order_serializers.py  test_orders_models.py  test_orders_urls.py  test_orders_views.py
src/zerohunger/product/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/zerohunger/product/migrations/: 0001_initial.py  0002_auto_20200528_2033.py
src/zerohunger/product/test/: test_product_models.py  test_product_serializers.py  test_urls.py  test_views.py
src/zerohunger/zerohunger/: asgi.py  settings.py  urls.py  wsgi.py
